Update IndexedCluster.java